# Graphic-Homework

./: .gitignore  CMakeLists.txt  Graphic-Homework.sln  README.md  main.cpp
Graphic-Homework/: Application.cpp  Application.h  Camera.cpp  Camera.h  Graphic-Homework.vcxproj  Graphic-Homework.vcxproj.filters  Shader.cpp  Shader.h  TetraGasket.cpp  TetraGasket.h  UIManager.cpp  UIManager.h  gasket.frag  gasket.vert  main.cpp
Graphic-Homework/core/: Application.cpp
Graphic-Homework/rendering/: TetraGasket.cpp
